--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "tests"
   ],
   "dependencies": {
-    "c3": "~0.4.10",
-    "angular-spinner": "~0.6.1"
+    "angular-spinner": "~0.6.1",
+    "jquery": "~2.1.3",
+    "bootstrap": "~3.3.4",
+    "c3": "~0.4.10"
   }
 }
